[project]
name = "depth3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "markupsafe==2.1.5",
    "matplotlib>=3.10.5",
    "open3d>=0.19.0",
    "pillow>=11.0.0",
    "transformers>=4.55.4",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
]
